--- a/layout/common/thumbnail.ejs
+++ b/layout/common/thumbnail.ejs
@@ -1,7 +1,7 @@
 <a href="<%- url_for(post.link ? post.link : post.path) %>" class="thumbnail">
     <% var thumbnailUrl = thumbnail(post) %>
     <% if (thumbnailUrl) { %>
-        <span style="background-image:url(<%- thumbnailUrl %>)" alt="<%= post.title %>" class="thumbnail-image"></span>
+        <img loading=lazy src=<%- thumbnailUrl %> alt="<%= post.title %>" class="thumbnail-image" />
     <% } else { %>
         <span class="thumbnail-image thumbnail-none"></span>
     <% } %>
