--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -7,7 +7,7 @@
                 <div class="main-body-inner">
                     <section id="main">
                         <%- partial('common/content-title') %>
-                        <div class="main-body-content">
+                        <div class="main-body-content bg-gray-500">
                             <%- body %>
                         </div>
                     </section>
