--- a/layout/common/head.ejs
+++ b/layout/common/head.ejs
@@ -56,4 +56,5 @@
 
     <%- js('libs/jquery/3.5.0/jquery.min') %>
     <%- partial('plugin/scripts', { isHead: true }) %>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
