--- a/layout/common/summary.ejs
+++ b/layout/common/summary.ejs
@@ -1,23 +1,21 @@
-<article class="article article-summary<%= (post.direction && post.direction.toLowerCase() === 'rtl' ? ' rtl' : '') %>">
-    <div class="article-summary-inner">
-        <% if (theme.customize.thumbnail === true) { %>
-        <%- partial('common/thumbnail', { counter: true }) %>
+<div class="bg-white rounded shadow-md overflow-hidden">
+  <div class="article-summary-inner">
+    <% if (theme.customize.thumbnail===true) { %>
+      <%- partial('common/thumbnail', { counter: true }) %>
         <% } %>
-        <div class="article-meta">
+          <div class="article-meta">
             <div class="category">
-            <%- list_categories(post.categories, {
-                depth:2,
-                style: 'none',
-                show_count: false,
-                class: 'article-category',
-                separator: '<i class="icon fa fa-angle-right"></i>',
-            }) %>
+              <%- list_categories(post.categories, { depth:2, style: 'none' , show_count: false,
+                class: 'rounded px-1 mr-2 bg-gray-400 article-category' ,
+                separator: '<i class="icon fa fa-angle-right"></i>' , }) %>
             </div>
-            <div class="date"><time datetime="<%= date_xml(post.date) %>" itemprop="datePublished"><%= date(post.date) %></time></div>
-        </div>
-        <%- partial('post/title', { class_name: 'article-title', linkable: true }) %>
-        <p class="article-excerpt">
-            <%- excerpt(post) %>
-        </p>
-    </div>
-</article>
+            <div class="date"><time datetime="<%= date_xml(post.date) %>" itemprop="datePublished">
+                <%= date(post.date) %>
+              </time></div>
+          </div>
+          <%- partial('post/title', { class_name: 'text-2xl m-2' , linkable: true }) %>
+            <p class="text-gray-500 m-2 line-clamp-3">
+              <%- excerpt(post) %>
+            </p>
+  </div>
+</div>
