--- a/layout/common/thumbnail.ejs
+++ b/layout/common/thumbnail.ejs
@@ -1,11 +1,14 @@
-<a href="<%- url_for(post.link ? post.link : post.path) %>" class="thumbnail">
-    <% var thumbnailUrl = thumbnail(post) %>
-    <% if (thumbnailUrl) { %>
-        <img loading=lazy src=<%- thumbnailUrl %> alt="<%= post.title %>" class="thumbnail-image" />
-    <% } else { %>
-        <span class="thumbnail-image thumbnail-none"></span>
-    <% } %>
-    <% if (typeof(counter) !== 'undefined' && counter) { %>
-        <%- partial('comment/counter') %>
-    <% } %>
-</a>
+<div class="overflow-hidden relative shadow">
+  <a href="<%- url_for(post.link ? post.link : post.path) %>" class="thumbnail">
+    <% var thumbnailUrl=thumbnail(post) %>
+      <% if (thumbnailUrl) { %>
+        <img loading=lazy src=<%- thumbnailUrl %> alt="<%= post.title %>" class="w-full h-[194px] object-cover
+          overflow-hidden" />
+          <% } else { %>
+            <span class="thumbnail-image thumbnail-none"></span>
+            <% } %>
+  </a>
+  <% if (typeof(counter) !=='undefined' && counter) { %>
+    <%- partial('comment/counter') %>
+      <% } %>
+</div>
