--- a/layout/common/summary.ejs
+++ b/layout/common/summary.ejs
@@ -3,11 +3,11 @@
     <% if (theme.customize.thumbnail===true) { %>
       <%- partial('common/thumbnail', { counter: true }) %>
         <% } %>
-          <div class="article-meta">
+          <div class="flex justify-between m-2">
             <div class="category">
               <%- list_categories(post.categories, { depth:2, style: 'none' , show_count: false,
                 class: 'rounded px-1 mr-2 bg-gray-400 article-category' ,
-                separator: '<i class="icon fa fa-angle-right"></i>' , }) %>
+                separator: '' , }) %>
             </div>
             <div class="date"><time datetime="<%= date_xml(post.date) %>" itemprop="datePublished">
                 <%= date(post.date) %>
